# hdr-toolbox

./: .gitignore  AGENTS.md  DESIGN.md  README.md  README_zh.md  index.html  issue.md  package-lock.json  package.json  visual-qa.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
UI/: DESIGN.md  code.html
docs/: twinkle-tray-brightness-paths.md
src/: AGENTS.md  App.tsx  architectureContract.test.ts  brightnessSource.ts  displayContract.test.ts  errors.test.ts  errors.ts  hotkeys.test.ts  hotkeys.ts  main.tsx  styles.css  syncBrightness.test.ts  syncBrightness.ts  tauriApi.ts  theme.test.ts  theme.ts  themePreference.test.ts  themePreference.ts  types.test.ts  types.ts  visualContract.test.ts  visualQa.css  visualQa.tsx
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  display.rs  lib.rs  main.rs  tray.rs
src-tauri/src/app/: commands.rs  logging.rs  mod.rs  state.rs  window.rs
src-tauri/src/display/: accent.rs  brightness.rs  commands.rs  ddcci.rs  error.rs  ffi.rs  merge.rs  mod.rs  model.rs  projection.rs  reader.rs  service.rs  session.rs  source_state.rs  wmi.rs  writer.rs
src/app/: useAppController.ts  useDialogController.ts  useHotkeyController.ts  useNoticeController.ts  useSettingsController.ts  useTrayDisplayEvents.ts
src/brightness/: brightnessCapability.test.ts  brightnessCapability.ts  brightnessInteraction.test.ts  brightnessInteraction.ts  useBrightnessController.ts
src/hooks/: README.md  (+16 more)
(+13 files in other folders)
